--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <div id="typing-container">
           <p id="typing-text" class="aboutBlurb">
           I'm a <strong>growth product manager</strong> with a <strong>broad range of experience</strong> in startups and scale-up across multiple industries and verticals. My main areas of focus are:
+          <br>
     <ul>
         <li>Sustainability</li>
         <li>SaaS</li>
@@ -64,7 +65,6 @@
 
 
           </p>
-          <span id="cursor" class="blink">|</span>
         </div>
       </div>
       <div class="aboutImage">
@@ -78,8 +78,8 @@
   <div class="SkillsCard">
           <div class="ContentSkillsCard">
             <h1 class="SkillsCardTitle">Skills</h1>
-            <h2 class="SkillsCardSubtitle">If you had to put them in a box</h2>
-            <p class="SkillsCardBlurb">I bring my <span class="WordBlurbHighlight"><strong>growth mindset</strong></span> to a <span class="WordBlurbHighlight"><strong>lean product process</strong></span>. My <span class="WordBlurbHighlight"><strong>marketing background</strong></span> allows me to empathise</strong> with <span class="WordBlurbHighlight"><strong>the customer</strong></span>whilst my <span class="WordBlurbHighlight"><strong>entreprenuarial background</strong></span> gives me the commercial accumen to <span class="WordBlurbHighlight"><strong>drive business growth</strong>.</p>
+            <h2 class="SkillsCardSubtitle">If you had to put them in a box.</h2>
+            <p class="SkillsCardBlurb">I bring my <span class="WordBlurbHighlight"><strong>growth mindset</strong></span> to a <span class="WordBlurbHighlight"><strong>lean product process</strong></span>. My <span class="WordBlurbHighlight"><strong>marketing background</strong></span> allows me to empathise</strong> with <span class="WordBlurbHighlight"><strong>the customer</strong></span> whilst my <span class="WordBlurbHighlight"><strong>entreprenuarial background</strong></span> gives me the commercial acumen to <span class="WordBlurbHighlight"><strong>drive business growth</strong>.</p>
           </div>
 
 <!-- Images for the skills cards -->
@@ -139,13 +139,13 @@
 <div class="portfolioProjects" id ="portfolio">
 <div class="PortfolioBlurb">
   <h1>Key projects</h1>
-  <p> I've built and launched products at various stages. From ideation of b2b sales processes 
-  to improving the user experience for thousands of customers. </p>
+  <p> I've built and launched products at various stages. From ideation of B2B sales processes 
+  to improving user experiences for thousands of customers. </p>
 </div>
 <div class="selectedPortfolioProjects">
 
   <div class="content">
-    <h1>Business Dashboard</h1>
+    <h1>C-Suite Data Visualisation project</h1>
     <p>From the initial ideation to final launch, I led a project to implement a business wide data dashboard that enabled business decisions and succinct objectives and key results.</p>
     <h2>What was the problem?</h2>
     <p>The team never had a clear overview of business metrics that mattered the most. All decisions were based on data that was either old or irrelevant. Furthermore, the data had been manipulated by multiple parties making it inaccurate and unreliable.</p>
@@ -155,17 +155,17 @@
       <li>Inefficient allocation of capital and human resource</li>
     </ul>
     <h2>What was the minimum viable product?</h2>
-    <p>I built a prototype using miro, showcasing what could be shown and why. Once approved to work on it as a project, I recruited the engineers to build a script that would pull information from AWS on a scheduled basis to a google spreadsheet. From there I used Google’s Looker studio to visualise the information. </p>
+    <p>I designed visual wireframe using Miro to showcase a potential dashboard. Once approved to work on it as a project, I recruited the engineers to build a script that would pull information from AWS on a scheduled basis to a Google spreadsheet. From there, I used Google’s Looker studio to visualise the information. </p>
     <h2>What did the initial product look like?</h2>
-    <p>With the initial MVP complete, I was able to bring more comprehensive information into the dashboard, merge data and visualise customer journeys, the overall health of the platform, new sign ups, repeat buyers, how many times they were purchasing, etc. </p>
-<h2>The Final product</h2>
+    <p>With the initial MVP complete, I was able to bring more comprehensive information into the dashboard, merge data and visualise customer journeys, the overall health of the platform, new sign-ups, repeat buyers, how many times they were purchasing, etc. </p>
+<h2>The final product</h2>
 <p>An all-in-one dashboard that allowed managers and teams to see how they were performing, along with goal attainment along with visualised information.</p>
 <h2>Outcome</h2>
-<p>After taking the teams through the various stages of the product life cycle, we were able to bring clarity and objectivity to the decision making process</p>
+<p>After taking the teams through the various stages of the product life cycle, we were able to bring clarity and objectivity to the decision-making process.</p>
 <ul>
   <li>Management created goals that aligned to the business objectives aligned to the data</li>
-  <li>In the first quarter, the dashboard was viewed 174 times.</li>
-  <li>It was incorporated into the monthly all hands meeting, and became the go to company wide resource. </li>
+  <li>In the first quarter, the dashboard had a view time of over 5 minutes (indicating teams were spending time engaging with the data).</li>
+  <li>It was incorporated into the monthly all hands meeting, and became the go-to company-wide resource.</li>
 
 
 </ul>
@@ -175,18 +175,18 @@
     <p>I lead a team to update and refine the company's homepage. Through user testing and data analysis, I identified, tested and analysed features changes to the home page. As a growth manager at the time, I helped the engineers and designers create a home page that reflected the company's value at the time. 
     </p>
     <h2>What was the problem?</h2>
-    <p>Analytics suggested that users were arriving and leaving the homepage without much interaction. The bounce rate was abnormally high, and the overall new buyers per month were stagnating. Through user interviews, it was clear the value proposition wasn’t aligning to what the product was. .</p>
+    <p>Analytics suggested that users were arriving and leaving the homepage without much interaction. The bounce rate was abnormally high, and the overall new buyers per month were stagnating. Through user interviews, it was clear the value proposition wasn’t aligning the product.</p>
     <ul>
       <li>Bounce rate was consistently at 92%</li>
       <li>Conversion rates were less than 2%</li>
       <li>Time on the page was less than 30 seconds</li>
     </ul>
     <h2>What was the minimum viable product?</h2>
-    <p>Using the already in place buttons, I requested that one of them be changed to a get started button, which would validate whether or not our users were getting confused and leaving the page. Over the period of a month, we saw the sign up rate increase by 2%. Further user testing uncovered that the imagery and the slogan weren’t resonating with our buyers. This lead to an overhaul of the hero imagery. </p>
+    <p>User testing uncovered that CTAs, imagery, and slogan weren't resonating with buyers. Using the already in place website design, I requested A/B testing and changes to CTAs and a overhaul of the hero imagery, leading to a sign-up rate increase by 2% over just a month.</p>
     <h2>What did the initial product look like?</h2>
     <p>With the initial evidence, I was able to motivate an entire home page overhaul which included testimonials, less confusing buttons and messaging, project showcases and easier ways to sign up and purchase. </p>
-<h2>The Final product</h2>
-<p>An entirely new and repositioned home page that was reflective of the target audience's ambitions.</p>
+<h2>The final product</h2>
+<p>An entirely new home page that was reflective of the target audience's needs.</p>
 <h2>Outcome</h2>
 <p>After observing analytics, and doing further user reviews, we were able to portray what members would be signing up to successfully</p>
 <ul>
@@ -198,25 +198,24 @@
 </ul>
 <div class="divider"></div>
 
-<h1>B2B product </h1>
+<h1>B2B Product </h1>
     <p>I was part of the team that led to the implementation of the business product. From the initial identification of the problem through to the growth of the product, I was involved in each stage of the process.</p>
     <h2>What was the problem?</h2>
-    <p>Through interviews and inbound conversations with the customer success and sales teams, it became clear that there was a need for a product that businesses could use to sign up and make purchases. The challenge was to build a whole host of new products that would accommodate the needs of each business for tax compliance reasons.</p>
+    <p>Through interviews and inbound conversations with the customer success and sales teams, it became clear that there was a need for specific type of "platform" or user journey designed for business. The challenge was to build a whole host of tax compliancys, legal entity onboarding flows and "whitelabled" dashboards that reflected the clients objectives.</p>
     <ul>
-      <li>Complicated KYB process</li>
       <li>Complicated KYB process</li>
       <li>Onboarding was optimised for individuals and not businesses.</li>
     </ul>
     <h2>What was the minimum viable product?</h2>
-    <p>A simple landing page was created to understand the initial need for a business solution. The landing page was incorporated into sales emails. Traffic and sign ups were monitored over a 2 week period. During that time, we assessed who was signing up and why. After receiving a flurry of business requests, we decided to update the sign up form to include a drop down for business. </p>
+    <p>A simple landing page was created to understand the initial need for a business solution. The landing page was incorporated into sales emails. Traffic and sign-ups were monitored over a 2-week period. During that time, we assessed who was signing up and why. After receiving a flurry of business requests, we decided to update the sign-up form to include a drop-down menu for business. </p>
     <h2>What did the initial product look like?</h2>
-    <p>Revamping the entire onboarding process had to include tax records and business information (legal entity name, legal structure, licences, etc). We first incorporated legal names and key personal information into the sign up form once a user had initially entered the name of the company and their email address. </p>
-<h2>The Final product</h2>
-<p>The final product consisted of new entities within the database to determine who was a legal entity vs an individual. Individuals could purchase in their own private capacity as well as purchasing on behalf of a company. Having the separate entities allowed the dev team to create a streamlined personalised registration experience. Furthermore, customised white labelled dashboards allowed employees of the company to access their own business dashboards and see how the company as a whole was collectively making an impact. </p>
+    <p>Revamping the entire onboarding process had to include tax records and business information (legal entity name, legal structure, licences, etc). We first incorporated legal names and key personal information into the sign-up form once a user had initially entered the name of the company and their email address. </p>
+<h2>The final product</h2>
+<p>The final product consisted of new entities within the database to determine who was a legal entity vs an individual. Individuals could purchase in their own private capacity as well as purchasing on behalf of a company. Having the separate entities allowed the development team to create a streamlined personalised registration experience. Furthermore, customised white labelled dashboards allowed employees of the company to access their own business dashboards and see how the company as a whole was collectively making an impact. </p>
 <h2>Outcome</h2>
 <p>With the initial launch of the revamped process, I was able to measure how many businesses vs individuals were signing up. </p>
 <ul>
-  <li>30% increase business entity sign ups over the first quarter from the initial launch</li>
+  <li>30% increase business entity sign-ups over the first quarter from the initial launch</li>
   <li>Projects sold out 3x times faster as a result of having businesses purchasing.</li>
   <li><i>&apos;Taxation&apos;</i> and <i>&apos;How do I sign up as a business&apos;</i> queries dropped to 0. </li>
 
@@ -237,8 +236,8 @@
       <h2>Growth Product Manager</h2>
     </div>
   <div class="ConnectContactSection">
-    <h1>Lets chat</h1>
-    <H2>I am always keen to connect with people in tech, and learn more about product mangement.</H2>
+    <h1>Let's chat</h1>
+    <H2>I am always keen to connect with people in tech, and learn more about product management. Connect with me via:</H2>
 
     <div class="connectIcons">
       <a href="http://www.linkedin.com/in/benvink" class="LinkedinImg"><img src="5.png" alt="">
